# Vlad_OS_Eg

./: CMakeLists.txt  main.cpp
headers/: client.h  d_watcher.h  list_directory_server.h  message_reader.h  message_sender.h
source/: client.cpp  d_watcher.cpp  list_directory_server.cpp  message_reader.cpp  message_sender.cpp
